# omni-downloader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  out.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: n8n-workflow-setup.md  omni-downloader-workflow.n8n.json
src/: App.vue
src-tauri/: Cargo.toml  error.txt  omni-downloader.cfg  tauri.conf.json
src-tauri/src/: binaries.rs  cleanup.rs  config.rs  core.rs  logging.rs  main.rs  mcp.rs
src/assets/: index.css
src/components/: InputArea.vue  QueueManager.vue  SettingsDialog.vue  TerminalView.vue
worker/: Cargo.toml
worker/src/: main.rs
