[package]
name = "omni-downloader-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-downloader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
xid = "1.1.1"
zip = "4.2.0"
